<resources>
    <string name="app_name">MaxMaven Task</string>
    <string name="hint_search">Search books</string>
    <string name="hint_title">Android Things</string>
    <string name="hint_author">by chrissetiana</string>
    <string name="hint_year">2018.</string>
    <string name="hint_publisher">Android Studio.</string>
    <string name="hint_pages">1315 pages</string>
    <string name="hint_link">https://books.google.com.ng/books?isbn=</string>
    <string name="hint_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>

    <string name="btn_desc">Search</string>
    <string name="img_desc">book cover</string>

    <string name="no_result">No data found.</string>
    <string name="no_conn">No internet connection.</string>
</resources>