<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageButton
        android:id="@+id/favorite"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="30dp"
        android:background="@drawable/baseline_favorite_border_24"
        app:layout_constraintEnd_toEndOf="@+id/relativeLayout"
        app:layout_constraintTop_toTopOf="@+id/relativeLayout" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/book_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerVertical="true"
            android:contentDescription="@string/img_desc"
            android:src="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/book_image"
            android:layout_toRightOf="@id/book_image"
            android:orientation="vertical"
            android:padding="@dimen/inner">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="30dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/book_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    tools:text="@string/hint_title" />

                <TextView
                    android:id="@+id/book_pages"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    tools:text="@string/hint_pages" />

            </LinearLayout>

            <TextView
                android:id="@+id/book_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                tools:text="@string/hint_author" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/book_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    tools:text="@string/hint_year" />

                <TextView
                    android:id="@+id/book_publisher"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    tools:text="@string/hint_publisher" />


            </LinearLayout>

            <TextView
                android:id="@+id/book_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="3"
                android:textAlignment="gravity"
                android:textSize="16sp"
                tools:text="@string/hint_desc" />

        </LinearLayout>
    </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>